Bug 771083 - Shutdown telemetry causes "Assertion failure: r == count, at xpcom/build/mozPoisonWriteMac.cpp:194"

White list the shutdown time fd. r=benjamin.